--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ section{
     justify-content: space-between;
     align-items: center;
     background: #111;
-    background: url(images/myPic1.jpg);
+    background: url(images/banner.jpeg);
     background-size: cover;
     background-position: right center;
 }
